k8s/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: go-feed-gateway
  namespace: default
spec:
  gatewayClassName: aws-alb
  infrastructure:
    parametersRef:
      kind: LoadBalancerConfiguration
      name: go-feed-lbconfig
      group: gateway.k8s.aws
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

  # Uncomment when domain + ACM cert is ready:
  # - name: https
  #   protocol: HTTPS
  #   port: 443
  #   hostname: "gofeed-demo.eu.org"
  #   allowedRoutes:
  #     namespaces:
  #       from: All
