k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-feed
  namespace: default
spec:
  parentRefs:
    - name: go-feed-gateway
      namespace: default

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: go-feed
          port: 8080
